# breast-cancer-prediction

./: .gitignore  README.md  app.py  preprocess.py  preprocessing.ipynb  preprocessing_summary.txt  pyproject.toml  train.py  training_summary.txt
.ipynb_checkpoints/: preprocessing-checkpoint.ipynb
